@@ -1,4 +1,4 @@
-/* Copyright (C) 1991, 1993, 1995, 1996, 2002 Free Software Foundation, Inc.
+/* Copyright (C) 1991,1993,1995,1996,2002,2005 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
 
    The GNU C Library is free software; you can redistribute it and/or
@@ -19,15 +19,19 @@
 #include <errno.h>
 #include <unistd.h>
 
+#include <l4/kip.h>
+
 /* Return the system page size.  */
 int
 __getpagesize ()
 {
-  __set_errno (ENOSYS);
-  return 0;
+  void *kip;
+  int min_page_bit;
+
+  kip = L4_GetKernelInterface ();
+  min_page_bit = ffs (L4_PageSizeMask (kip));
+
+  return 1 << (min_page_bit - 1);
 }
 libc_hidden_def (__getpagesize)
-stub_warning (getpagesize)
-
 weak_alias (__getpagesize, getpagesize)
-#include <stub-tag.h>
